[metadata]
name = enigma_machine
version = 0.1

[options]
packages =
    enigma_machine
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
enigma_machine = py.typed

[flake8]
ignore = E221, W605, W504, E127, E126
max-line-length = 160

[mypy]
mypy_path = "src"
plugins = numpy.typing.mypy_plugin
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true